@@ -3,6 +3,7 @@
 - Added shortcode attribute back_link_text (default: "Return to list" translatable) to allow customization of text for back link on entry detail page.
 - Added shortcode attribute back_link_url (default: null) to allow customization of back link on entry detail page.
 - Added filter gravityflow_back_link_url_entry_detail to allow customization of back link on entry detail page.
+- Added filter gravityflow_search_criteria_status to allow status page to filter on multiple field criteria
 - Fixed the Gravity Perks Nested Forms Add-On integration not delaying the workflow for child entries created before the parent form is submitted.
 - Fixed an issue where Conditional Routing based on what values a Multiuser field contains could lead to extra users being set as step assignees.
 - Fixed conditional assignee routing using the post category field.
